<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokemon_image">Pokemon Image</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="tap_to_favorite">Tap to Favorite</string>
    <string name="pokemon_id"># %d</string>
    <string name="appearance">Appearance</string>
    <string name="type">Type</string>
    <string name="base_stats">Base Stats</string>
    <string name="height">Height</string>
    <string name="data_dummy">0,0</string>
    <string name="weight">Weight</string>
    <string name="grass">grass</string>
    <string name="stat_base">%d / 300</string>
    <string name="hp">HP</string>
    <string name="atk">ATK</string>
    <string name="s_atk">S-ATK</string>
    <string name="def">DEF</string>
    <string name="s_def">S-DEF</string>
    <string name="spd">SPD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_add_fav">Success Add to Favorite</string>
    <string name="success_remove_fav">Success Remove from Favorite</string>
    <string name="pokemon_not_found">Pokemon Tidak Ditemukan</string>
    <string name="search">Search</string>
    <string name="search_pokemon">Search Pokemon</string>
</resources>