<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.detail.fragment.DetailBaseStatsFragment">

    <TextView
        android:id="@+id/tv_hp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:gravity="start"
        android:text="@string/hp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_atk"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="start"
        android:text="@string/atk"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hp" />

    <TextView
        android:id="@+id/tv_def"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="start"
        android:text="@string/def"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_atk" />

    <TextView
        android:id="@+id/tv_s_atk"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="start"
        android:text="@string/s_atk"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_def" />

    <TextView
        android:id="@+id/tv_s_def"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="start"
        android:text="@string/s_def"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_s_atk" />

    <TextView
        android:id="@+id/tv_spd"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:gravity="start"
        android:text="@string/spd"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_s_def" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/stat_hp"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_hp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_hp"
        app:layout_constraintTop_toTopOf="@+id/tv_hp"
        app:progressView_autoAnimate="true"
        app:progressView_colorBackground="@color/black"
        app:progressView_colorProgress="@color/colorHp"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/colorSoftGray"
        app:progressView_labelSize="10sp"
        app:progressView_labelTypeface="bold"
        app:progressView_max="300"
        app:progressView_min="0"
        app:progressView_radius="12dp" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/stat_attack"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_atk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_atk"
        app:layout_constraintTop_toTopOf="@+id/tv_atk"
        app:progressView_autoAnimate="true"
        app:progressView_colorBackground="@color/black"
        app:progressView_colorProgress="@color/colorAtk"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/colorSoftGray"
        app:progressView_labelSize="10sp"
        app:progressView_labelTypeface="bold"
        app:progressView_max="300"
        app:progressView_min="0"
        app:progressView_radius="12dp" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/stat_def"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_def"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_def"
        app:layout_constraintTop_toTopOf="@+id/tv_def"
        app:progressView_autoAnimate="true"
        app:progressView_colorBackground="@color/black"
        app:progressView_colorProgress="@color/colorDef"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/colorSoftGray"
        app:progressView_labelSize="10sp"
        app:progressView_labelTypeface="bold"
        app:progressView_max="300"
        app:progressView_min="0"
        app:progressView_radius="12dp" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/stat_s_attack"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_s_atk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_s_atk"
        app:layout_constraintTop_toTopOf="@+id/tv_s_atk"
        app:progressView_autoAnimate="true"
        app:progressView_colorBackground="@color/black"
        app:progressView_colorProgress="@color/colorSAtk"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/colorSoftGray"
        app:progressView_labelSize="10sp"
        app:progressView_labelTypeface="bold"
        app:progressView_max="300"
        app:progressView_min="0"
        app:progressView_radius="12dp" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/stat_s_def"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_s_def"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_s_def"
        app:layout_constraintTop_toTopOf="@+id/tv_s_def"
        app:progressView_autoAnimate="true"
        app:progressView_colorBackground="@color/black"
        app:progressView_colorProgress="@color/colorSDef"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/colorSoftGray"
        app:progressView_labelSize="10sp"
        app:progressView_labelTypeface="bold"
        app:progressView_max="300"
        app:progressView_min="0"
        app:progressView_radius="12dp" />

    <com.skydoves.progressview.ProgressView
        android:id="@+id/stat_spd"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_spd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_spd"
        app:layout_constraintTop_toTopOf="@+id/tv_spd"
        app:progressView_autoAnimate="true"
        app:progressView_colorBackground="@color/black"
        app:progressView_colorProgress="@color/colorSpd"
        app:progressView_labelColorInner="@color/white"
        app:progressView_labelColorOuter="@color/colorSoftGray"
        app:progressView_labelSize="10sp"
        app:progressView_labelTypeface="bold"
        app:progressView_max="300"
        app:progressView_min="0"
        app:progressView_radius="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>